--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ghom-prettify",
-  "version": "1.1.0",
-  "description": "Prettier extension for cast language to parsers and parse using async. Includes all prettier plugins.",
+  "version": "1.1.1-bite",
+  "description": "Prettier extension for cast language to parsers and parse using async.",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -9,30 +9,11 @@
   "keywords": [
     "prettier",
     "discord",
-    "markdown",
-    "plugins"
+    "markdown"
   ],
   "author": "ghom",
   "license": "ISC",
   "dependencies": {
-    "@prettier/plugin-php": "^0.15.2",
-    "@prettier/plugin-pug": "^1.10.1",
-    "@prettier/plugin-ruby": "^0.20.1",
-    "@prettier/plugin-xml": "^0.12.0",
-    "prettier": "^2.1.1",
-    "prettier-plugin-apex": "^1.7.0",
-    "prettier-plugin-elm": "^0.7.0",
-    "prettier-plugin-go-template": "0.0.10",
-    "prettier-plugin-java": "^0.8.3",
-    "prettier-plugin-jsdoc": "^0.2.4",
-    "prettier-plugin-kotlin": "^2.0.0",
-    "prettier-plugin-package": "^1.2.0",
-    "prettier-plugin-packagejson": "^2.2.7",
-    "prettier-plugin-pkg": "^0.8.0",
-    "prettier-plugin-properties": "^0.1.0",
-    "prettier-plugin-sh": "^0.6.0",
-    "prettier-plugin-solidity": "^1.0.0-alpha.59",
-    "prettier-plugin-svelte": "^1.4.1",
-    "prettier-plugin-tailwind": "^2.1.9"
+    "prettier": "^2.1.1"
   }
 }
