--- a/package.json
+++ b/package.json
@@ -20,10 +20,10 @@
   "author": "ghom",
   "license": "ISC",
   "dependencies": {
-    "prettier": "^2.1.1"
+    "prettier": "^2.1.1",
+    "@types/prettier": "^2.2.3"
   },
   "devDependencies": {
-    "@types/prettier": "^2.2.3",
     "typescript": "^4.2.3"
   }
 }
